test/typechecker/fail/redeclared_struct_field.fu
struct Foo[T] { i: T }
struct Bar : Foo[i64] { i: i32 }
